syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mservice.gen";
option java_outer_classname = "GrpcServer";
package serverpakage;

// The greeting service definition.
service CatLog {
 // Sends a command get log 148
 rpc Command148 (stream Command) returns (Log) {}
 // Sends a command get log 218
 rpc Command218 (stream Command) returns (Log) {}
 // Sends a command get log 232
 rpc Command232 (stream Command) returns (Log) {}
 // Send a command get log 108
 rpc Command108 (stream Command) returns (Log) {}
 // Send a command get log 102
  rpc Command102 (stream Command) returns (Log) {}
 // Send a command get log 13.12
 rpc Command12 (stream Command) returns (Log) {}
}

// The request message containing the user's name.
message Command {
 string command = 1;
}

// The response message containing the greetings
message Log {
 string log = 1;
}